adicionando arquivos da pagina de registro

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,13 +1,13 @@
-:root{
-	--background : #A3A9AA;
-	--cor1: #0B132B;
-	--cor2: #1D3270;
+:root {
+    --background: #A3A9AA;
+    --cor1: #0B132B;
+    --cor2: #1D3270;
     --cor3: #3E6BF0;
-	--corSombra: #0B132B;
-	--corFonte:#ffff;
+    --corSombra: #0B132B;
+    --corFonte: #ffff;
 }
 
-*{
+* {
     margin: 0px;
     padding: 0px;
 }
@@ -15,105 +15,144 @@
 @font-face {
     src: url(fonts/KaiseiTokumin-Regular.ttf);
     font-family: 'Kaisei Tokumin', serif;
+    font-family: 'Source Code Pro', monospace;
 }
 
-body{
+body {
     background-color: var(--background);
     font-family: 'Kaisei Tokumin', serif;
     font-size: 15px;
     font-weight: 300;
 }
 
-/* !Barra pesquisa, menu carrinho e login */
-    .cabecalhoPagina{
-        background-color: var(--cor1);
-        padding-bottom: 1%;
+.cabecalhoSite{
+    margin-top: 0px;
+    background-color: var(--cor1);
+
+}
+
+/* ! Icone e animação do texto* */
+    .logoLoja{
+        width: 120%;
     }
 
-    .barraPesquisa{
-        padding: 1%;
+    .textoTopo {
+        font-family: 'Source Code Pro', monospace;
+        color: white;
+        font-size: 1.875rem;
+        overflow: hidden;
+        text-align: left;
+        vertical-align: middle;
+        padding-top: 15px;
     }
 
-    .pesquisaCabecalho{
-        width: 40%;
-        height: 6%;
-        border-color: #0D0D0D;
+    .digitacao-animation {
+        animation: digitacao 1s steps(14) 1s normal;
+    }
+
+    @keyframes digitacao {
+        from {
+            width: 0;
+        }
+        to {
+            width: 8em;
+        }
+    }
+/* ! Fim icone e animação do texto* */
+
+/* ************************************************************************ */
+
+/* !Barra de pesquisa e icones de carrinho e user */
+    .pesquisaCabecalho #caixaPesquisa{
         border-width: 2px;
-        border-radius: 5px;
-        margin-top: 1%;
-        background-color: #E6E6E6;
-        margin-left: 30%;
-        margin-right: auto;
     }
 
-    .pesquisaCabecalho td{
-        border: none;
+    .row *{
+        padding-right: 0px;
     }
 
     .pesquisaInput{
-        background: none;
         border: none;
         width: 100%;
-        height: 100%;
-        font-size: 120%;
-        margin-left: 5%;
+        padding: 5px;
+        background-color: var(--corFonte);
+        padding-left: 5px;
+        vertical-align: middle;
+        border-radius: 8px 0px 0px 8px;
+    }
+
+    .pesquisaIcon{
+        width: 4%;
+        padding-top: 5px;
+        background-color: var(--cor3);
+        text-align: center;
+        border-radius: 0px 8px 8px 0px;
+    }
+
+    .pesquisaIcon .botao{
+        border: none;
+        background: none;
     }
 
     .fi-rr-search{
-        font-size: 20px;
-        font-style: oblique;
+        padding-top: 3px;
+        padding-right: 15px;
+        text-decoration: none;
         color: black;
         float: right;
-        padding-right: 10px;
+        background: none;
     }
 
-    #iconeBarraPesquisa{
-        margin-top:1%;
-        margin-right: 3%;
-        text-decoration: none;
-        color: white;
-        font-size: 33px;
+    .iconeCartUser{
         float: right;
-    }
-    #iconeBarraPesquisa:hover{
-        color: var(--cor3);
-    }
-
-    .logoLoja{
-        width: 12%;
-        float: left;
-        position: relative;
+        margin-right: 5%;
+        margin-top: -3%;
     }
 
-    .header{
+    .iconeCartUser button{
+        background: none;
+        border: none;        
+    }
+
+    .iconeCartUser #iconeBarraPesquisa{
+        color: var(--corFonte);
+        margin-right: 15px;
+        text-decoration: none;
+        font-size: 150%;
+    }
+/* !Fim barra de pesquisa e icones de carrinho e user */
+
+/* ******************************************************************* */
+
+/*! Menu dropdown*/
+    .header {
         position: relative;
         width: 100%;
         align-tracks: right;
     }
 
-    .menuDropdown{
+    .menuDropdown {
         position: relative;
     }
 
-    .fi-rr-menu-burger{
+    .fi-rr-menu-burger {
         margin: 5px;
     }
 
-    .menu ul{
+    .menu ul {
         list-style-type: none;
         padding: 15px;
         margin: 0;
-        margin-top: 15px;
         text-align: left;
         text-shadow: 2px 2px 2px var(--corSombra);
     }
 
-    .menu ul li{
+    .menu ul li {
         display: inline;
         position: relative;
     }
 
-    .menu ul li a{
+    .menu ul li a {
         color: white;
         text-decoration: none;
         padding: 5px;
@@ -121,118 +160,113 @@ body{
         vertical-align: middle;
     }
 
-    .menu ul li a:hover{
+    .menu ul li a:hover {
         color: var(--cor3);
         text-decoration: none;
     }
 
-    .menu ul ul{
+    .menu ul ul {
         width: 160px;
         display: none;
         left: 0;
         position: absolute;
     }
 
-    .menu ul li:hover ul{
+    .menu ul li:hover ul {
+        color: var(--cor3);
         display: block;
         margin: 0px;
-
     }
 
-    .menu ul ul li{
+    .menu ul ul li {
         background-color: var(--cor1);
-        padding-right: 5px;
         display: flex;
-        box-shadow: .1875rem .1875rem .1875rem var(--corFonte);
     }
 
-    .menu ul ul li a{
+    .menu ul ul li a {
         display: block;
         background-color: var(--cor1);
         text-align: left;
         margin-bottom: 5px;
     }
 
-    .menu ul ul li #imgMenu{
-        width: 25%;
-    }
-
-    .menu ul ul ul li{
+    .menu ul ul ul li {
         width: 150px;
         display: none;
         left: 0px;
     }
-    
+
     .menu ul ul li:hover ul li {
+        color: var(--cor3);
         display: block;
-        margin-left: 94%;
+        margin-left: 88%;
         padding: 2px;
-        
     }
+/*! Fim menu dropdown*/
 
-
-/* !Fim  barra de pesquisa, cabeçalho, icones */
+/* ******************************************************************* */
 
 /* !Fale conosco */
-    .faleConosco{
-        width: 70%;
-        background-color: var(--cor2);
-        text-align: center;
-        margin-top: 3%;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 3%;
-        padding: 1.25rem;
-        box-shadow: .1875rem .1875rem .1875rem var(--cor1);
-        border-radius: .3125rem;
-        
-    }
 
-    .faleConosco h2{
-        margin-bottom: .8125rem;
-        text-align: center;
-        color:white;
-        text-shadow:2px 2px 2px var(--corSombra);
-    }
+.faleConosco {
+    width: 70%;
+    background-color: var(--cor2);
+    text-align: center;
+    margin-top: 3%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3%;
+    padding: 1.25rem;
+    box-shadow: .1875rem .1875rem .1875rem var(--cor1);
+    border-radius: .3125rem;
+}
 
-    #caixaTexto{
-        margin: .625rem;
-        border: none;
-        border-radius: .3125rem;
-        height: 1.875rem;
-        padding-left: .4375rem;
-        box-shadow: 3px 3px 3px var(--corSombra);
-    }
+.faleConosco h2 {
+    margin-bottom: .8125rem;
+    text-align: center;
+    color: white;
+    text-shadow: 2px 2px 2px var(--corSombra);
+}
 
-    #botaoEnviar{
-        border: none;
-        height: 1.875rem;
-        width: 3.125rem;
-        border-radius: .3125rem;
-        box-shadow: 3px 3px 3px var(--corSombra);
-        
-    }
-    #botaoEnviar:hover{
-        background-color: rgb(196, 196, 196);
-    }
+#caixaTexto {
+    margin: .625rem;
+    border: none;
+    border-radius: .3125rem;
+    height: 1.875rem;
+    padding-left: .4375rem;
+    box-shadow: 3px 3px 3px var(--corSombra);
+}
 
-    .inputEmail{
-        width: 18.75rem;
-    }
+#botaoEnviar {
+    border: none;
+    height: 1.875rem;
+    width: 3.125rem;
+    border-radius: .3125rem;
+    box-shadow: 3px 3px 3px var(--corSombra);
+}
 
-    .inputNome{
-        width: 15.625rem;
-    }
+#botaoEnviar:hover {
+    background-color: rgb(196, 196, 196);
+}
+
+.inputEmail {
+    width: 18.75rem;
+}
+
+.inputNome {
+    width: 15.625rem;
+}
+
 
 /* !Cabecalho carrossel */
 
-    .cabecalhoCarrossel{
+    .cabecalhoCarrossel {
         margin-top: 5%;
         text-align: center;
         text-shadow: 1px 1px 1px var(--corSombra);
     }
 
-    .cabecalhoCarrossel hr{
+    .cabecalhoCarrossel hr {
         width: 563px;
         height: 2px;
         color: none;
@@ -242,82 +276,87 @@ body{
         margin-right: auto;
     }
 
+    .carousel-inner {
+        width: 50%;
+    }
+
 
 /* !Carrossel inicio */
+
+
 /*
 Fonte do carrossel:
 https://www.codigofonte.com.br/dicas/como-criar-um-slideshow-sem-usar-uma-linha-de-javascript
 Foi utilizado o código e modificado conforme a necessidade. 
 */
-    .carrossel-mascara{
-        width: 563px; /* tem a mesma largura das imagens*/
-        margin: 0 auto;
-        overflow: hidden;
-        font-size: 0; /* para remover o espaço entre elementos-filho marcados como inline-block*/
-        margin-top: 1%;
-    }
-        
-    .carrossel-container {
-        width: 2815px;  /* a soma da largura de todos os elementos */
-        transition: 1s ease;
-        height: 432px; /* tem a mesma altura das imagens */
-    }
-        
-        /*Especifique também o tamanho de cada elemento interno, para que não haja margem para erros de renderização:*/
-        
-    .carrossel-container img{
-        width: 563px;
-        height: auto;
-        display: inline-block;
-        vertical-align:top;
-        font-size: 16px;
-        margin: 0 auto;
-        border-radius: 5px;
-    }
-    
-    .slide {
-        animation: slide 15s ease infinite;
-    }
 
-    @keyframes slide {
-        0% {
+.carrossel-mascara {
+    width: 563px;
+    /* tem a mesma largura das imagens*/
+    margin: 0 auto;
+    overflow: hidden;
+    font-size: 0;
+    /* para remover o espaço entre elementos-filho marcados como inline-block*/
+    margin-top: 1%;
+}
+
+.carrossel-container {
+    width: 2815px;
+    /* a soma da largura de todos os elementos */
+    transition: 1s ease;
+    height: 432px;
+    /* tem a mesma altura das imagens */
+}
+
+
+/*Especifique também o tamanho de cada elemento interno, para que não haja margem para erros de renderização:*/
+
+.carrossel-container img {
+    width: 563px;
+    height: auto;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 16px;
+    margin: 0 auto;
+    border-radius: 5px;
+}
+
+.slide {
+    animation: slide 15s ease infinite;
+}
+
+@keyframes slide {
+    0% {
         transform: translateX(0%);
-        }
-                
-        12.5% {
-            transform: translateX(0%);
-        }
-                
-        25% {
-            transform: translateX(-20%);
-        }
-                
-        37.5% {
-            transform: translateX(-20%);
-        }
-                
-        50% {
-            transform: translateX(-40%);
-        }
-                
-        62.5% {
-            transform: translateX(-40%);
-        }
-                
-        75% {
-            transform: translateX(-60%);
-        }
-                
-        87.5% {
-            transform: translateX(-60%);
-        }
-                
-        99% {
-            transform: translateX(-60%);
-        }
-                
-        100% {
-            transform: translateX(0);
-        }
     }
+    12.5% {
+        transform: translateX(0%);
+    }
+    25% {
+        transform: translateX(-20%);
+    }
+    37.5% {
+        transform: translateX(-20%);
+    }
+    50% {
+        transform: translateX(-40%);
+    }
+    62.5% {
+        transform: translateX(-40%);
+    }
+    75% {
+        transform: translateX(-60%);
+    }
+    87.5% {
+        transform: translateX(-60%);
+    }
+    99% {
+        transform: translateX(-60%);
+    }
+    100% {
+        transform: translateX(0);
+    }
+}
+
+
 /* !Fim Fale conosco */
